# android-haskell-sdl

./: .gitignore  LICENSE  README.md  local.properties.default
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/haskell/: Android.chs  Draw.chs  HaskellActivity.hs  android-agar-io.cabal  init.c
app/src/main/java/ga/agarri/agario/: AgarIOActivity.java
app/src/main/res/values/: strings.xml
