name:                android-agar-io
version:             0.1.0.0
synopsis:            An Agar.io client for Android
-- description:         
homepage:            http://agar.io
license:             MIT
author:              Adrià Garriga-Alonso
maintainer:          adria.garriga@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable libmain.so
  main-is:             HaskellActivity.hs
  other-modules:       Android, Draw
  build-depends:       base, sdl2, stm
  default-language:    Haskell2010
  ghc-options:         -no-hs-main -threaded
  build-tools:         c2hs

  c-sources: init.c
  includes: android/native_activity.h, android/log.h, GLES2/gl2.h
  extra-libraries: SDL2 dl GLESv1_CM GLESv2 log android
  ld-options: -shared -Wl,-soname,libmain.so -Wl,-z,relro -Wl,-z,now -Wl,-u,Java_org_libsdl_app_SDLActivity_nativeInit
  cc-options: -shared -fPIC
